OpenConcerto 1.3b4