@@ -14,21 +14,15 @@
  package org.openconcerto.erp.core.common.ui;
 
 import org.openconcerto.sql.model.SQLField;
-import org.openconcerto.sql.model.SQLRowAccessor;
-import org.openconcerto.sql.model.SQLRowValues;
-import org.openconcerto.sql.model.SQLTable;
-import org.openconcerto.sql.request.MutableRowItemView;
-import org.openconcerto.utils.CollectionUtils;
+import org.openconcerto.sql.request.SQLRowItemView;
+import org.openconcerto.sql.sqlobject.itemview.RowItemViewComponent;
+import org.openconcerto.ui.valuewrapper.ValueWrapper;
 import org.openconcerto.utils.GestionDevise;
-import org.openconcerto.utils.checks.EmptyListener;
-import org.openconcerto.utils.checks.EmptyObject;
-import org.openconcerto.utils.checks.EmptyObjectHelper;
 import org.openconcerto.utils.checks.ValidListener;
 import org.openconcerto.utils.checks.ValidState;
 import org.openconcerto.utils.doc.Documented;
 import org.openconcerto.utils.text.SimpleDocumentListener;
 
-import java.awt.Component;
 import java.awt.Font;
 import java.awt.event.FocusAdapter;
 import java.awt.event.FocusEvent;
@@ -38,32 +32,20 @@ import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
 import java.beans.PropertyChangeListener;
 import java.beans.PropertyChangeSupport;
-import java.sql.ResultSet;
-import java.sql.SQLException;
-import java.util.List;
-import java.util.Set;
-import java.util.Vector;
 
+import javax.swing.JComponent;
 import javax.swing.JTextField;
 import javax.swing.event.DocumentEvent;
-
-import org.apache.commons.collections.Predicate;
 
 /**
  * Field permettant de stocker les devises au format 2 chiffres apres la virgule sous forme de long
  * dans la base, utiliser un champ de type BigInt signed sous mysql bigInt unsigned -->
  * java.math.BigInteger bigInt signed --> java.lang.Long
  */
-public class DeviseField extends JTextField implements EmptyObject, MutableRowItemView, Documented {
-    private boolean completing = false;
-    private final boolean autoCompletion;
+public class DeviseField extends JTextField implements ValueWrapper<Long>, Documented, RowItemViewComponent {
 
     private SQLField field;
-    private String sqlName;
 
-    private List<String> items;
-
-    private EmptyObjectHelper helper;
     private final PropertyChangeSupport supp;
     // does this component just gained focus
     private boolean gained;
@@ -74,59 +56,45 @@ public class DeviseField extends JTextField implements EmptyObject, MutableRowIt
     private boolean authorizedNegative = false;
 
     public DeviseField() {
-        this(15, false, false);
+        this(false);
     }
 
     public DeviseField(boolean bold) {
-        this(15, false, bold);
+        this(15, bold);
     }
 
     public DeviseField(int columns) {
         this(columns, false);
     }
 
-    private DeviseField(int columns, boolean autoCompletion) {
-        this(columns, autoCompletion, false);
-    }
-
-    private DeviseField(int columns, boolean autoCompletion, boolean bold) {
+    private DeviseField(int columns, boolean bold) {
         super(columns);
         if (bold) {
             this.setFont(getFont().deriveFont(Font.BOLD));
         }
         this.supp = new PropertyChangeSupport(this);
         this.gained = false;
-        this.autoCompletion = autoCompletion;
         this.getDocument().addDocumentListener(new SimpleDocumentListener() {
             public void update(DocumentEvent e) {
                 DeviseField.this.textModified();
             }
         });
+        this.init();
     }
 
     /**
      * Methode appelée quand le texte est modifié
      */
     protected void textModified() {
-        // execute la completion
-        if (this.autoCompletion)
-            complete();
-        this.supp.firePropertyChange("value", null, this.getUncheckedValue());
+        this.supp.firePropertyChange("value", null, this.getValue());
     }
 
     @Override
-    public void init(String sqlName, Set<SQLField> fields) {
-        this.field = CollectionUtils.getSole(fields);
-        this.sqlName = sqlName;
-        this.helper = new EmptyObjectHelper(this, new Predicate() {
-            public boolean evaluate(Object object) {
-                return object == null;
+    public void init(SQLRowItemView v) {
+        this.field = v.getField();
+    }
 
-                // final String val = GestionDevise.currencyToString(((Long)
-                // object).longValue());
-            }
-        });
-
+    private void init() {
         // TODO use JFormattedTextField => conflit getValue()
         // DefaultFormatterFactory NumberFormatter (getAllowsInvalid) NumberFormat
 
@@ -220,11 +188,17 @@ public class DeviseField extends JTextField implements EmptyObject, MutableRowIt
         });
     }
 
+    @Override
     public final void resetValue() {
-        this.setValue("");
+        this.setValue((Long) null);
     }
 
-    public final void setValue(String val) {
+    @Override
+    public void setValue(Long val) {
+        this.setValue(val == null ? "" : GestionDevise.currencyToString(val.longValue()));
+    }
+
+    private final void setValue(String val) {
         if (!this.getText().equals(val))
             this.setText(val);
     }
@@ -233,139 +207,29 @@ public class DeviseField extends JTextField implements EmptyObject, MutableRowIt
         this.setFont(getFont().deriveFont(Font.BOLD));
     }
 
-    public Object getUncheckedValue() {
+    @Override
+    public String toString() {
+        return this.getClass().getSimpleName() + " authorizedNegative: " + this.isAuthorizedNegative();
+    }
 
+    @Override
+    public Long getValue() {
         if (this.getText().trim().length() == 0) {
             return null;
         } else {
-            return new Long(GestionDevise.parseLongCurrency(this.getText()));
+            return Long.valueOf(GestionDevise.parseLongCurrency(this.getText()));
         }
         // return this.getText();
     }
 
-    public final SQLTable getTable() {
-        return this.field.getTable();
-    }
-
-    public String toString() {
-        return this.getClass().getSimpleName() + " on " + this.field;
-    }
-
-    /**
-     * Recherche si on peut completer la string avec les items de completion
-     * 
-     * @param string
-     * @return nulll si pas trouve, sinon le mot complet
-     */
-    private String getCompletion(String string) {
-        int c = 0;
-        if (string.length() < 1) {
-            return null;
-        }
-        String result = null;
-        for (int i = 0; i < this.items.size(); i++) {
-            String obj = (String) this.items.get(i);
-            if (obj.startsWith(string)) {
-                c++;
-                result = obj;
-            }
-        }
-        if (c == 1)
-            return result;
-        else
-            return null;
-    }
-
-    /**
-     * @param string
-     */
-    private final void addItem(String string) {
-        if (!this.items.contains(string) && string.length() > 1) {
-
-            this.items.add(string);
-            writeToCache(string);
-
-        }
-    }
-
-    // charge les elements de completion si besoin
-    private final void checkCache() {
-        if (this.items == null) {
-            this.items = new Vector(20);
-            readCache();
-        }
-    }
-
-    synchronized final void complete() {
-        checkCache();
-        if (!this.completing) {
-            this.completing = true;
-            String originalText = this.getText();
-            // ne completer que si le texte fait plus de 2 char et n'est pas que des chiffres
-            if (originalText.length() > 2 && !originalText.matches("^\\d*$")) {
-                String completion = this.getCompletion(originalText);
-                if (completion != null && !this.getText().trim().equalsIgnoreCase(completion.trim())) {
-                    this.setText(completion);
-                    this.setSelectionStart(originalText.length());
-                    this.setSelectionEnd(completion.length());
-                }
-            }
-            this.completing = false;
-        }
-    }
-
-    // public void addTextModifiedListener(TextModifiedListener l) {
-    // if (this.listeners == null) {
-    // this.listeners = new Vector(1);
-    // }
-    // if (!listeners.contains(l)) {
-    // listeners.addElement(l);
-    // }
-    // }
-
-    protected final void addToCache(String s) {
-        if (s != null) {
-            if (s.length() > 0 && !this.items.contains(s))
-                this.items.add(s);
-        }
-    }
-
-    // A sous classer pour avoir un autre comportement:
-
-    /**
-     * Methode a sous classer pour remplir le cache doit appeller addToCache
-     */
-    protected void readCache() {
-        String req = "SELECT * FROM COMPLETION WHERE CHAMP=\"" + this.field.getFullName() + "\"";
-        ResultSet rs = this.getTable().getBase().execute(req);
-        try {
-            while (rs.next()) {
-                addToCache(rs.getString("LABEL"));
-            }
-        } catch (SQLException e) {
-            e.printStackTrace();
-        }
-    }
-
-    protected void writeToCache(String string) {
-        String req = "INSERT INTO COMPLETION (CHAMP,LABEL) VALUES (\"" + this.field.getFullName() + "\",\"" + string + "\")";
-        this.getField().getTable().getBase().execute(req);
-    }
-
-    public Object getValue() {
-        return this.helper.getValue();
-    }
-
-    public boolean isEmpty() {
-        return this.helper.isEmpty();
-    }
-
-    public void addEmptyListener(EmptyListener l) {
-        this.helper.addListener(l);
-    }
-
+    @Override
     public void addValueListener(PropertyChangeListener l) {
         this.supp.addPropertyChangeListener(l);
+    }
+
+    @Override
+    public void rmValueListener(PropertyChangeListener l) {
+        this.supp.removePropertyChangeListener(l);
     }
 
     public SQLField getField() {
@@ -379,6 +243,7 @@ public class DeviseField extends JTextField implements EmptyObject, MutableRowIt
         return ValidState.getTrueInstance();
     }
 
+    @Override
     public void addValidListener(ValidListener l) {
         // FIXME
     }
@@ -388,26 +253,8 @@ public class DeviseField extends JTextField implements EmptyObject, MutableRowIt
         // FIXME
     }
 
-    public void show(SQLRowAccessor r) {
-        if (r.getFields().contains(this.getField().getName())) {
-            Object o = r.getObject(this.getField().getName());
-            this.setValue(GestionDevise.currencyToString(((Number) o).longValue()));
-        }
-    }
-
-    public void insert(SQLRowValues vals) {
-        this.update(vals);
-    }
-
-    public void update(SQLRowValues vals) {
-        vals.put(this.getField().getName(), this.isEmpty() ? SQLRowValues.SQL_DEFAULT : this.getUncheckedValue());
-    }
-
-    public String getSQLName() {
-        return this.sqlName;
-    }
-
-    public Component getComp() {
+    @Override
+    public JComponent getComp() {
         return this;
     }
 
